static/css/styles.css
/* ... */
.holdings-list ul{list-style:none;margin:0;padding:0;
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.2);
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,.2);
      box-shadow: 0 1px 3px rgba(0,0,0,.2);}


#nav { position: relative; z-index: 200; overflow: visible; }
#nav a:hover,
#nav a:focus {text-decoration: none; cursor: pointer; }

#nav .nav-menu > li {border-left:1px solid #1A8F72; padding:3px;margin:5px; padding-left: 15px;}
#nav .nav-menu > li:first-child {border-left:none; padding-left:0px;}

.dropdown-menu li a { display:block; background:#f7f3ee;padding:12px 12px 12px 18px;border-top:1px solid #ccc;color:#1A8F72;}
.dropdown-menu li a:hover {color:#FFFFFF;background:#1A8F72;}
.dropdown-menu li:first-child a{border-top:none;}
.dropdown-menu li.active a{background:#fff;color:#000;}
.dropdown-menu li.my_template a { background-color: #fff; }
.dropdown-menu li.my_template a i { padding-right: 6px; }
.disabled {background-color:#f7f3ee;}

.dropdown .login span.meta { color: #000; }
.dropdown .login span.username { text-transform:uppercase; }

/* bootstrap buttons */

.btn {
  -webkit-border-radius:3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  background: #27b492;
  filter: none;
  border:none;
  color: #fff !important;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.08);
  -webkit-font-smoothing: antialiased;
  -webkit-box-shadow: inset -1px -1px 1px rgba(0,0,0,.2);
  -moz-box-shadow: inset -5px -5px 5px 0 #888;
  box-shadow: inset -1px -1px 2px rgba(0,0,0,.2), inset 1px 1px 1px rgba(255,255,255,.2);
  -webkit-transition:background ease-out 0.03s;
  padding: 7px 16px;
  font-family:'Droid Serif', georgia, serif;
  font-weight:bold;
}

.btn:hover,
.btn:focus,
.btn:active{background:#1a8f72;}

.btn-dark{background:#106351;}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active{background-color:#0a5041;}
.btn-submit{padding: 12px 28px;font-size:16px;}

.btn-link{color:#1a8f72; outline: none; border:0;}
.btn-link:hover{color:#106351;}

.holdings .btn-link{color:#683568;}
.holdings .btn-link:hover{color:#573657;}

.btn-purple{background-color:#683568;}

.btn-purple:hover,
.btn-purple:focus,
.btn-purple:active{background-color:#573657;}

section.submit .btn-link {font-size: 14px; font-weight: 600;}

.removedraft{float:left; vertical-align: none;}

/* Holdings */

#holdings{background:transparent;box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none;padding:12px 0;}
.holdings-editor .editor{background:#fff;width:732px;padding:12px;
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.2);
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,.2);
      box-shadow: 0 1px 3px rgba(0,0,0,.2);
}

section.holdings-list{background:#f7f3ee;}

.holdings-list ul{list-style:none;margin:0;padding:0;
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.2);
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,.2);
      box-shadow: 0 1px 3px rgba(0,0,0,.2);}

.holdings-list a{display:block;background:#f7f3ee;padding:12px;border-top:1px solid #ccc;color:#666;}
.holdings-list li:first-child a{border-top:none;}
.holdings-list li.active a{background:#fff;color:#000;}

.holdings-list a.sigel {font-weight: 600;font-size: 14px;color:#666;}

.holdings-list a.sigel i {opacity:.60;}

.content.holdings section h2{background-color:#a756a7;}
.content.holdings section h2 i{border-right-color:#683568;}

.content.holdings section h3{font:bold italic 16px/20px "Droid Serif", georgia,serif; color:#a756a7; 
  border-bottom:1px solid #a756a7; padding-bottom: 2px; }

.content.holdings section h3.inline_heading {
  border: none;
  float: left;
  margin-left: 10px;
  margin-bottom: 0px;
  line-height: 32px;
}

section.holdings ul li{list-style: none;}

a.beta-blocker {text-decoration: none; cursor:default;}

/* Autocomplete */

.acResults {width:466px;border:1px solid #ccc;border-top-width:0;background:#fff;
  -webkit-box-shadow: 0 0px 6px rgba(0,0,0,.2);
  -moz-box-shadow: 0 0px 6px rgba(0,0,0,.2);
  box-shadow: 0 0px 6px rgba(0,0,0,.2);
  margin:-1px 0 0 1px;
}
.acResults ul li{margin:6px 0 0;padding:0;}
.acResults>ul>li {border-top:1px solid #ddd;padding: 10px 12px;margin:0;}
.acResults li{font-family:"Open Sans", arial,sans-serif!important;}
.acResults h4{padding:0 28px 0 0;margin:0;position:relative;}
.acResults h4 .date{color:#aaa;color:rgba(0,0,0,.5);margin-left:4px;font-weight:normal;}
.acResults h4 .what{position:absolute;right:0;top:-3px;color:#27b492;font-size:11px;font-weight:normal;}
.acResults h4 .what .ficon{font-size:20px;line-height:10px;position:relative;top:3px;margin-right:-1px;}
.acResults .about{font-size:13px;line-height:20px;color:#666;}
.acSelect{background:#c8f4ea;}

.acResults h4 .name:hover {color:106351;}

/* Select 2 */
.select2-results .select2-highlighted {
    background: #c8f4ea;
    color: #222;
}
.select2-container .select2-choice {
    -moz-user-select: none;
    background-clip: padding-box;
    background-color: #FFFFFF;
    background-image: none;
    border: none;
    border-radius: 4px 4px 4px 4px;
    color: #444444;
    display: block;
    height: 26px;
    line-height: 26px;
    overflow: hidden;
    padding: 0 0 0 8px;
    position: relative;
    text-decoration: none;
    white-space: nowrap;
}
.select2-default {
    color:#ccc !important; font-style:italic; font-size:14px !important;
}

.select2-container .select2-choice:hover {
	background: #f8f8f8;
}
.select2-container .select2-choice div {
    background: none;
    border-left: 1px solid #CCC;
    border-radius: 0 4px 4px 0;
    display: block;
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
    width: 18px;
}


.saved #draft, .published #publish { opacity: 0.4; }
#draft, #publish { opacity: 1; }


/* Popover */

.popover{
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  -webkit-box-shadow: 3px;
  -moz-box-shadow: 3px;
  box-shadow: 0 0px 2px rgba(0,0,0,.15);
  z-index: 1000;
}

.popover h3{font:bold 15px/18px "Open Sans", sans-serif;border:none;background:none;padding-bottom:0;}
/* ... */

